Updated to ongoing implementation of Simple Policy Gradient

--- a/Simple Policy Gradient.ipynb
+++ b/Simple Policy Gradient.ipynb
@@ -32,11 +32,11 @@
       "metadata": {
         "id": "wr_BaDfxCwqT",
         "colab_type": "code",
+        "outputId": "7cbf1581-8b18-451a-e6c2-12b9b0675ac8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 382
-        },
-        "outputId": "b09c090b-f7bb-46f3-886e-48737db7fd7d"
+          "height": 402
+        }
       },
       "cell_type": "code",
       "source": [
@@ -50,18 +50,18 @@
           "text": [
             "Collecting gym\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/d4/22/4ff09745ade385ffe707fb5f053548f0f6a6e7d5e98a2b9d6c07f5b931a7/gym-0.10.9.tar.gz (1.5MB)\n",
-            "\u001b[K    100% |████████████████████████████████| 1.5MB 2.3MB/s \n",
+            "\u001b[K    100% |████████████████████████████████| 1.5MB 13.4MB/s \n",
             "\u001b[?25hRequirement already satisfied: scipy in /usr/local/lib/python3.6/dist-packages (from gym) (1.1.0)\n",
             "Requirement already satisfied: numpy>=1.10.4 in /usr/local/lib/python3.6/dist-packages (from gym) (1.14.6)\n",
             "Requirement already satisfied: requests>=2.0 in /usr/local/lib/python3.6/dist-packages (from gym) (2.18.4)\n",
             "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from gym) (1.11.0)\n",
             "Collecting pyglet>=1.2.0 (from gym)\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/1c/fc/dad5eaaab68f0c21e2f906a94ddb98175662cc5a654eee404d59554ce0fa/pyglet-1.3.2-py2.py3-none-any.whl (1.0MB)\n",
-            "\u001b[K    100% |████████████████████████████████| 1.0MB 18.9MB/s \n",
+            "\u001b[K    100% |████████████████████████████████| 1.0MB 18.0MB/s \n",
             "\u001b[?25hRequirement already satisfied: urllib3<1.23,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests>=2.0->gym) (1.22)\n",
-            "Requirement already satisfied: idna<2.7,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests>=2.0->gym) (2.6)\n",
-            "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests>=2.0->gym) (3.0.4)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests>=2.0->gym) (2018.10.15)\n",
+            "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests>=2.0->gym) (3.0.4)\n",
+            "Requirement already satisfied: idna<2.7,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests>=2.0->gym) (2.6)\n",
             "Requirement already satisfied: future in /usr/local/lib/python3.6/dist-packages (from pyglet>=1.2.0->gym) (0.16.0)\n",
             "Building wheels for collected packages: gym\n",
             "  Running setup.py bdist_wheel for gym ... \u001b[?25l-\b \b\\\b \b|\b \b/\b \bdone\n",
@@ -86,7 +86,7 @@
         "import numpy as np\n",
         "import tensorflow as tf\n",
         "import gym\n",
-        "from gym import "
+        "from gym.spaces import Discrete, Box"
       ],
       "execution_count": 0,
       "outputs": []
@@ -101,8 +101,7 @@
       "source": [
         "# Arguments\n",
         "env_name = 'CartPole-v0'\n",
-        "render = True\n",
-        "lr = 1e-2"
+        "render = True"
       ],
       "execution_count": 0,
       "outputs": []
@@ -111,11 +110,11 @@
       "metadata": {
         "id": "l01SIfVNOO3c",
         "colab_type": "code",
+        "outputId": "9683a5ff-4547-4e00-cece-7c3e2642c1c4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
-        },
-        "outputId": "cab1025c-6320-4513-8b79-c933f1eea02b"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -138,11 +137,182 @@
       "metadata": {
         "id": "zh-CKSfDOUYC",
         "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "c4ccaa92-a820-4aec-ffb0-7a4b43497296"
+      },
+      "cell_type": "code",
+      "source": [
+        "# Get the action space size and observation space size\n",
+        "act_size = env.action_space.n\n",
+        "obs_size = env.observation_space.shape[0]\n",
+        "\n",
+        "print ('Action Space Size: {}'.format(act_size),\n",
+        "       '\\nObservation Space Size: {}'.format(obs_size))"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Action Space Size: 2 \n",
+            "Observation Space Size: 4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "Rxr8GqXeRR8Z",
+        "colab_type": "code",
         "colab": {}
       },
       "cell_type": "code",
       "source": [
-        "# Get the action space size and observation space size\n"
+        "# Network Hyperparameters\n",
+        "layers = 2\n",
+        "hneurons = [32, act_size]\n",
+        "epochs = 50\n",
+        "batch_size = 5000\n",
+        "lr = 1e-2\n",
+        "hid_act = tf.tanh\n",
+        "out_act = None"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "HzCocISRRUSZ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "# Build the network\n",
+        "inp = tf.placeholder(shape=(None, obs_size), dtype=tf.float32, name='input')\n",
+        "\n",
+        "a1 = tf.layers.dense(inp, units=hneurons[0], activation=hid_act)\n",
+        "logits = tf.layers.dense(a1, units=hneurons[1], activation=None)\n",
+        "\n",
+        "# Select the action\n",
+        "actions = tf.squeeze(tf.multinomial(logits=logits, num_samples=1), axis=1)\n",
+        "\n",
+        "# Loss function whose gradient is the policy gradient\n",
+        "wplaceholder = tf.placeholder(shape=(None,), dtype=tf.float32)\n",
+        "act_ph = tf.placeholder(shape=(None,), dtype=tf.int32)\n",
+        "action_masks = tf.one_hot(act_ph, act_size)\n",
+        "log_probs = tf.reduce_sum(action_masks * tf.nn.log_softmax(logits), axis=1)\n",
+        "loss = -tf.reduce_mean(wplaceholder * log_probs)\n",
+        "\n",
+        "# Make the train op\n",
+        "train_op = tf.train.AdamOptimizer(learning_rate=lr).minimize(loss)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "Cqq2GQRKL3HC",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "wGMf9JlpMNyZ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 239
+        },
+        "outputId": "6c692685-650f-4334-8cb0-372b283b2061"
+      },
+      "cell_type": "code",
+      "source": [
+        "# Training loop\n",
+        "for epoch in range(epochs):\n",
+        "    batch_loss, batch_rets, batch_lens = train_one_epoch()\n",
+        "    print ('Epoch: {:.3f} Loss: {:.3f} Return: {:.3f} ep_len: {:.3f}'\n",
+        "           .format(epoch+1, batch_loss, np.mean(batch_rets), np.mean(batch_lens)))"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-12-d32986ec7eb2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mepoch\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mepochs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mbatch_loss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_rets\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_lens\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_one_epoch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     print ('Epoch: {:.3f} Loss: {:.3f} Return: {:.3f} ep_len: {:.3f}'\n\u001b[1;32m      4\u001b[0m            .format(epoch+1, batch_loss, np.mean(batch_rets), np.mean(batch)))\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'train_one_epoch' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "T7PFOoR1Kt8d",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 280
+        },
+        "outputId": "12d64c84-e958-459a-c4e6-887d7e08969f"
+      },
+      "cell_type": "code",
+      "source": [
+        "# TensorBoard Setup\n",
+        "!wget https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip\n",
+        "!unzip ngrok-stable-linux-amd64.zip\n",
+        "get_ipython().system_raw('tensorboard --logdir=./tboard/FrozenLake-v0/ &')\n",
+        "get_ipython().system_raw('./ngrok http 6006 &')\n",
+        "!curl -s http://localhost:4040/api/tunnels | python3 -c \\\n",
+        "    \"import sys, json; print(json.load(sys.stdin)['tunnels'][0]['public_url'])\""
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "--2018-12-01 19:11:33--  https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip\n",
+            "Resolving bin.equinox.io (bin.equinox.io)... 34.232.181.106, 34.226.180.131, 34.232.40.183, ...\n",
+            "Connecting to bin.equinox.io (bin.equinox.io)|34.232.181.106|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 5363700 (5.1M) [application/octet-stream]\n",
+            "Saving to: ‘ngrok-stable-linux-amd64.zip’\n",
+            "\n",
+            "\r          ngrok-sta   0%[                    ]       0  --.-KB/s               \r         ngrok-stab  96%[==================> ]   4.92M  12.2MB/s               \rngrok-stable-linux- 100%[===================>]   5.11M  10.6MB/s    in 0.5s    \n",
+            "\n",
+            "2018-12-01 19:11:33 (10.6 MB/s) - ‘ngrok-stable-linux-amd64.zip’ saved [5363700/5363700]\n",
+            "\n",
+            "Archive:  ngrok-stable-linux-amd64.zip\n",
+            "  inflating: ngrok                   \n",
+            "http://d2cfdd99.ngrok.io\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "NYW-0FBOLtja",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
