Added option to save the progress in Simple Gradient Descent

--- a/Simple Policy Gradient.ipynb
+++ b/Simple Policy Gradient.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Simple Policy Gradient.ipynb",
       "version": "0.3.2",
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -32,7 +33,11 @@
       "metadata": {
         "id": "wr_BaDfxCwqT",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 315
+        },
+        "outputId": "444d8755-0b9a-4eeb-9dd8-1017601a1385"
       },
       "cell_type": "code",
       "source": [
@@ -41,8 +46,31 @@
         "!apt-get install python-opengl\n",
         "!pip install pyglet==1.2.4"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: gym in /usr/local/lib/python3.6/dist-packages (0.10.9)\n",
+            "Requirement already satisfied: requests>=2.0 in /usr/local/lib/python3.6/dist-packages (from gym) (2.18.4)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from gym) (1.11.0)\n",
+            "Requirement already satisfied: scipy in /usr/local/lib/python3.6/dist-packages (from gym) (1.1.0)\n",
+            "Requirement already satisfied: pyglet>=1.2.0 in /usr/local/lib/python3.6/dist-packages (from gym) (1.2.4)\n",
+            "Requirement already satisfied: numpy>=1.10.4 in /usr/local/lib/python3.6/dist-packages (from gym) (1.14.6)\n",
+            "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests>=2.0->gym) (3.0.4)\n",
+            "Requirement already satisfied: idna<2.7,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests>=2.0->gym) (2.6)\n",
+            "Requirement already satisfied: urllib3<1.23,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests>=2.0->gym) (1.22)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests>=2.0->gym) (2018.10.15)\n",
+            "Reading package lists... Done\n",
+            "Building dependency tree       \n",
+            "Reading state information... Done\n",
+            "python-opengl is already the newest version (3.1.0+dfsg-1).\n",
+            "0 upgraded, 0 newly installed, 0 to remove and 7 not upgraded.\n",
+            "Requirement already satisfied: pyglet==1.2.4 in /usr/local/lib/python3.6/dist-packages (1.2.4)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
@@ -59,7 +87,8 @@
         "from gym.spaces import Discrete, Box\n",
         "import matplotlib.pyplot as plt\n",
         "%matplotlib inline\n",
-        "from IPython import display"
+        "from IPython import display\n",
+        "from google.colab import files"
       ],
       "execution_count": 0,
       "outputs": []
@@ -83,7 +112,7 @@
       "metadata": {
         "id": "l01SIfVNOO3c",
         "colab_type": "code",
-        "outputId": "d0b2d823-78c3-4711-c3c9-02f06b898be6",
+        "outputId": "5b1e71f1-d91e-47b2-d60d-2ad7f1aedbd6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
@@ -110,7 +139,7 @@
       "metadata": {
         "id": "zh-CKSfDOUYC",
         "colab_type": "code",
-        "outputId": "8710c29a-3bce-418e-b15d-9075f48fb689",
+        "outputId": "a84748a6-06eb-43c3-fda8-1cccfa2165e3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -196,7 +225,8 @@
       "cell_type": "code",
       "source": [
         "sess = tf.Session()\n",
-        "sess.run(tf.global_variables_initializer())"
+        "sess.run(tf.global_variables_initializer())\n",
+        "saver = tf.train.Saver()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -296,77 +326,182 @@
     },
     {
       "metadata": {
+        "id": "ZKBRIwRckTcL",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "# Training Loop Parameters\n",
+        "ckpt_interval = 5\n",
+        "save_path = './ckpt_path/'\n",
+        "restore = True\n",
+        "ckpt_num = 15"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
         "id": "wGMf9JlpMNyZ",
         "colab_type": "code",
-        "outputId": "7f5e9656-cdb0-4bfe-f647-42ac6fb62e3f",
+        "outputId": "c12ba8d0-029a-4aa2-ab90-0ba7562c6026",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 885
+          "height": 1615
         }
       },
       "cell_type": "code",
       "source": [
         "# Training loop\n",
+        "\n",
+        "if restore and ckpt_num != None:\n",
+        "    saver.restore(sess, save_path + 'spg_ckpt{}.ckpt'.format(ckpt_num))\n",
+        "    print ('[INFO]Model Restored!!')\n",
+        "    \n",
         "for epoch in range(epochs):\n",
         "    batch_loss, batch_rets, batch_lens = train_one_epoch()\n",
         "    print ('Epoch: {:.3f} Loss: {:.3f} Return: {:.3f} ep_len: {:.3f}'\n",
-        "           .format(epoch+1, batch_loss, np.mean(batch_rets), np.mean(batch_lens)))"
+        "           .format(epoch+1, batch_loss, np.mean(batch_rets), np.mean(batch_lens)))\n",
+        "    \n",
+        "    if (epoch+1) % ckpt_interval == 0:\n",
+        "        print ('[INFO]Saving Checkpoint...')\n",
+        "        curr_save_path = saver.save(sess, save_path + 'spg_ckpt{}.ckpt'.format(epoch+1))\n",
+        "        print ('[INFO]Session saved Successfully!!')\n",
+        "        print ('[INFO]Checkpoint saved at: {}'.format(curr_save_path))\n",
+        "        print ('*************************************************')"
       ],
-      "execution_count": 27,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Epoch: 1.000 Loss: 24.082 Return: 26.649 ep_len: 26.649\n",
-            "Epoch: 2.000 Loss: 24.285 Return: 28.441 ep_len: 28.441\n",
-            "Epoch: 3.000 Loss: 28.568 Return: 32.987 ep_len: 32.987\n",
-            "Epoch: 4.000 Loss: 30.247 Return: 35.203 ep_len: 35.203\n",
-            "Epoch: 5.000 Loss: 32.122 Return: 40.715 ep_len: 40.715\n",
-            "Epoch: 6.000 Loss: 35.210 Return: 44.202 ep_len: 44.202\n",
-            "Epoch: 7.000 Loss: 36.932 Return: 48.317 ep_len: 48.317\n",
-            "Epoch: 8.000 Loss: 40.528 Return: 50.970 ep_len: 50.970\n",
-            "Epoch: 9.000 Loss: 38.384 Return: 53.287 ep_len: 53.287\n",
-            "Epoch: 10.000 Loss: 38.973 Return: 53.287 ep_len: 53.287\n",
-            "Epoch: 11.000 Loss: 44.026 Return: 61.914 ep_len: 61.914\n",
-            "Epoch: 12.000 Loss: 45.591 Return: 62.543 ep_len: 62.543\n",
-            "Epoch: 13.000 Loss: 46.638 Return: 69.192 ep_len: 69.192\n",
-            "Epoch: 14.000 Loss: 54.469 Return: 76.121 ep_len: 76.121\n",
-            "Epoch: 15.000 Loss: 53.321 Return: 76.182 ep_len: 76.182\n",
-            "Epoch: 16.000 Loss: 55.920 Return: 76.000 ep_len: 76.000\n",
-            "Epoch: 17.000 Loss: 61.135 Return: 85.627 ep_len: 85.627\n",
-            "Epoch: 18.000 Loss: 60.521 Return: 88.298 ep_len: 88.298\n",
-            "Epoch: 19.000 Loss: 74.435 Return: 107.574 ep_len: 107.574\n",
-            "Epoch: 20.000 Loss: 78.541 Return: 114.091 ep_len: 114.091\n",
-            "Epoch: 21.000 Loss: 80.942 Return: 131.308 ep_len: 131.308\n",
-            "Epoch: 22.000 Loss: 77.807 Return: 116.523 ep_len: 116.523\n",
-            "Epoch: 23.000 Loss: 83.605 Return: 131.789 ep_len: 131.789\n",
-            "Epoch: 24.000 Loss: 84.607 Return: 138.973 ep_len: 138.973\n",
-            "Epoch: 25.000 Loss: 79.274 Return: 123.390 ep_len: 123.390\n",
-            "Epoch: 26.000 Loss: 76.397 Return: 123.805 ep_len: 123.805\n",
-            "Epoch: 27.000 Loss: 84.773 Return: 133.789 ep_len: 133.789\n",
-            "Epoch: 28.000 Loss: 85.987 Return: 134.053 ep_len: 134.053\n",
-            "Epoch: 29.000 Loss: 84.268 Return: 129.949 ep_len: 129.949\n",
-            "Epoch: 30.000 Loss: 85.829 Return: 135.730 ep_len: 135.730\n",
-            "Epoch: 31.000 Loss: 84.755 Return: 138.486 ep_len: 138.486\n",
-            "Epoch: 32.000 Loss: 83.371 Return: 132.077 ep_len: 132.077\n",
-            "Epoch: 33.000 Loss: 93.952 Return: 154.030 ep_len: 154.030\n",
-            "Epoch: 34.000 Loss: 91.733 Return: 147.206 ep_len: 147.206\n",
-            "Epoch: 35.000 Loss: 99.097 Return: 167.097 ep_len: 167.097\n",
-            "Epoch: 36.000 Loss: 98.725 Return: 166.355 ep_len: 166.355\n",
-            "Epoch: 37.000 Loss: 103.311 Return: 176.483 ep_len: 176.483\n",
-            "Epoch: 38.000 Loss: 101.345 Return: 165.645 ep_len: 165.645\n",
-            "Epoch: 39.000 Loss: 105.146 Return: 177.793 ep_len: 177.793\n",
-            "Epoch: 40.000 Loss: 103.690 Return: 176.276 ep_len: 176.276\n",
-            "Epoch: 41.000 Loss: 108.041 Return: 182.571 ep_len: 182.571\n",
-            "Epoch: 42.000 Loss: 108.131 Return: 189.074 ep_len: 189.074\n",
-            "Epoch: 43.000 Loss: 109.167 Return: 188.222 ep_len: 188.222\n",
-            "Epoch: 44.000 Loss: 110.307 Return: 196.769 ep_len: 196.769\n",
-            "Epoch: 45.000 Loss: 110.184 Return: 190.222 ep_len: 190.222\n",
-            "Epoch: 46.000 Loss: 110.235 Return: 197.308 ep_len: 197.308\n",
-            "Epoch: 47.000 Loss: 110.812 Return: 198.308 ep_len: 198.308\n",
-            "Epoch: 48.000 Loss: 111.371 Return: 199.423 ep_len: 199.423\n",
-            "Epoch: 49.000 Loss: 111.377 Return: 200.000 ep_len: 200.000\n",
-            "Epoch: 50.000 Loss: 110.583 Return: 197.000 ep_len: 197.000\n"
+            "INFO:tensorflow:Restoring parameters from ./ckpt_path/spg_ckpt15.ckpt\n",
+            "[INFO]Model Restored!!\n",
+            "Epoch: 1.000 Loss: 94.900 Return: 185.852 ep_len: 185.852\n",
+            "Epoch: 2.000 Loss: 95.248 Return: 189.778 ep_len: 189.778\n",
+            "Epoch: 3.000 Loss: 93.399 Return: 184.107 ep_len: 184.107\n",
+            "Epoch: 4.000 Loss: 94.960 Return: 188.259 ep_len: 188.259\n",
+            "Epoch: 5.000 Loss: 90.891 Return: 179.000 ep_len: 179.000\n",
+            "[INFO]Saving Checkpoint...\n",
+            "[INFO]Session saved Successfully!!\n",
+            "[INFO]Checkpoint saved at: ./ckpt_path/spg_ckpt5.ckpt\n",
+            "*************************************************\n",
+            "Epoch: 6.000 Loss: 92.226 Return: 185.481 ep_len: 185.481\n",
+            "Epoch: 7.000 Loss: 88.927 Return: 177.345 ep_len: 177.345\n",
+            "Epoch: 8.000 Loss: 89.039 Return: 183.607 ep_len: 183.607\n",
+            "Epoch: 9.000 Loss: 84.313 Return: 170.533 ep_len: 170.533\n",
+            "Epoch: 10.000 Loss: 82.875 Return: 170.233 ep_len: 170.233\n",
+            "[INFO]Saving Checkpoint...\n",
+            "[INFO]Session saved Successfully!!\n",
+            "[INFO]Checkpoint saved at: ./ckpt_path/spg_ckpt10.ckpt\n",
+            "*************************************************\n",
+            "Epoch: 11.000 Loss: 79.048 Return: 165.387 ep_len: 165.387\n",
+            "Epoch: 12.000 Loss: 80.159 Return: 169.667 ep_len: 169.667\n",
+            "Epoch: 13.000 Loss: 78.457 Return: 164.355 ep_len: 164.355\n",
+            "Epoch: 14.000 Loss: 79.690 Return: 173.483 ep_len: 173.483\n",
+            "Epoch: 15.000 Loss: 78.927 Return: 170.100 ep_len: 170.100\n",
+            "[INFO]Saving Checkpoint...\n",
+            "[INFO]Session saved Successfully!!\n",
+            "[INFO]Checkpoint saved at: ./ckpt_path/spg_ckpt15.ckpt\n",
+            "*************************************************\n",
+            "Epoch: 16.000 Loss: 76.956 Return: 169.100 ep_len: 169.100\n",
+            "Epoch: 17.000 Loss: 77.104 Return: 168.533 ep_len: 168.533\n",
+            "Epoch: 18.000 Loss: 74.537 Return: 163.677 ep_len: 163.677\n",
+            "Epoch: 19.000 Loss: 75.099 Return: 170.567 ep_len: 170.567\n",
+            "Epoch: 20.000 Loss: 73.042 Return: 164.452 ep_len: 164.452\n",
+            "[INFO]Saving Checkpoint...\n",
+            "[INFO]Session saved Successfully!!\n",
+            "[INFO]Checkpoint saved at: ./ckpt_path/spg_ckpt20.ckpt\n",
+            "*************************************************\n",
+            "Epoch: 21.000 Loss: 74.969 Return: 172.200 ep_len: 172.200\n",
+            "Epoch: 22.000 Loss: 69.107 Return: 158.562 ep_len: 158.562\n",
+            "Epoch: 23.000 Loss: 71.353 Return: 162.935 ep_len: 162.935\n",
+            "Epoch: 24.000 Loss: 68.825 Return: 160.094 ep_len: 160.094\n",
+            "Epoch: 25.000 Loss: 71.799 Return: 167.067 ep_len: 167.067\n",
+            "[INFO]Saving Checkpoint...\n",
+            "[INFO]Session saved Successfully!!\n",
+            "[INFO]Checkpoint saved at: ./ckpt_path/spg_ckpt25.ckpt\n",
+            "*************************************************\n",
+            "Epoch: 26.000 Loss: 74.101 Return: 172.567 ep_len: 172.567\n",
+            "Epoch: 27.000 Loss: 74.920 Return: 174.138 ep_len: 174.138\n",
+            "Epoch: 28.000 Loss: 72.890 Return: 171.367 ep_len: 171.367\n",
+            "Epoch: 29.000 Loss: 75.761 Return: 175.759 ep_len: 175.759\n",
+            "Epoch: 30.000 Loss: 72.667 Return: 177.034 ep_len: 177.034\n",
+            "[INFO]Saving Checkpoint...\n",
+            "[INFO]Session saved Successfully!!\n",
+            "[INFO]Checkpoint saved at: ./ckpt_path/spg_ckpt30.ckpt\n",
+            "*************************************************\n",
+            "Epoch: 31.000 Loss: 79.209 Return: 185.071 ep_len: 185.071\n",
+            "Epoch: 32.000 Loss: 79.253 Return: 187.185 ep_len: 187.185\n",
+            "Epoch: 33.000 Loss: 78.923 Return: 191.444 ep_len: 191.444\n",
+            "Epoch: 34.000 Loss: 78.204 Return: 189.333 ep_len: 189.333\n",
+            "Epoch: 35.000 Loss: 79.983 Return: 192.444 ep_len: 192.444\n",
+            "[INFO]Saving Checkpoint...\n",
+            "[INFO]Session saved Successfully!!\n",
+            "[INFO]Checkpoint saved at: ./ckpt_path/spg_ckpt35.ckpt\n",
+            "*************************************************\n",
+            "Epoch: 36.000 Loss: 82.217 Return: 193.692 ep_len: 193.692\n",
+            "Epoch: 37.000 Loss: 82.714 Return: 199.615 ep_len: 199.615\n",
+            "Epoch: 38.000 Loss: 83.894 Return: 198.654 ep_len: 198.654\n",
+            "Epoch: 39.000 Loss: 87.199 Return: 199.385 ep_len: 199.385\n",
+            "Epoch: 40.000 Loss: 84.367 Return: 199.538 ep_len: 199.538\n",
+            "[INFO]Saving Checkpoint...\n",
+            "[INFO]Session saved Successfully!!\n",
+            "[INFO]Checkpoint saved at: ./ckpt_path/spg_ckpt40.ckpt\n",
+            "*************************************************\n",
+            "Epoch: 41.000 Loss: 85.091 Return: 199.538 ep_len: 199.538\n",
+            "Epoch: 42.000 Loss: 87.190 Return: 199.808 ep_len: 199.808\n",
+            "Epoch: 43.000 Loss: 87.480 Return: 200.000 ep_len: 200.000\n",
+            "Epoch: 44.000 Loss: 88.377 Return: 200.000 ep_len: 200.000\n",
+            "Epoch: 45.000 Loss: 89.082 Return: 199.192 ep_len: 199.192\n",
+            "[INFO]Saving Checkpoint...\n",
+            "[INFO]Session saved Successfully!!\n",
+            "[INFO]Checkpoint saved at: ./ckpt_path/spg_ckpt45.ckpt\n",
+            "*************************************************\n",
+            "Epoch: 46.000 Loss: 89.767 Return: 200.000 ep_len: 200.000\n",
+            "Epoch: 47.000 Loss: 90.286 Return: 200.000 ep_len: 200.000\n",
+            "Epoch: 48.000 Loss: 92.028 Return: 200.000 ep_len: 200.000\n",
+            "Epoch: 49.000 Loss: 91.099 Return: 200.000 ep_len: 200.000\n",
+            "Epoch: 50.000 Loss: 91.074 Return: 200.000 ep_len: 200.000\n",
+            "[INFO]Saving Checkpoint...\n",
+            "[INFO]Session saved Successfully!!\n",
+            "[INFO]Checkpoint saved at: ./ckpt_path/spg_ckpt50.ckpt\n",
+            "*************************************************\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "Bx8FnKJEl5jf",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 86
+        },
+        "outputId": "697a11ab-dcf6-40a5-fca9-aa37000f02a7"
+      },
+      "cell_type": "code",
+      "source": [
+        "# Download checkpoints\n",
+        "dwnld_ckpt = 50\n",
+        "for file_ending in ['meta', 'index', 'data-00000-of-00001']:\n",
+        "    files.download('./ckpt_path/spg_ckpt{}.ckpt.{}'.format(dwnld_ckpt, file_ending))\n",
+        "    print ('[INFO]Download popup for ckpt file with .{} ending sent successfully!!'\n",
+        "           .format(file_ending))\n",
+        "print ('All download notifications for the ckpt {} file sent successfully!!'.format(dwnld_ckpt))"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[INFO]Download popup for ckpt file with .meta ending sent successfully!!\n",
+            "[INFO]Download popup for ckpt file with .index ending sent successfully!!\n",
+            "[INFO]Download popup for ckpt file with .data-00000-of-00001 ending sent successfully!!\n",
+            "All download notifications for the ckpt 50 file sent successfully!!\n"
           ],
           "name": "stdout"
         }
@@ -415,22 +550,6 @@
           "name": "stdout"
         }
       ]
-    },
-    {
-      "metadata": {
-        "id": "NYW-0FBOLtja",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "env.reset()\n",
-        "for _ in range(1000):\n",
-        "    env.step(env.action_space.sample())\n",
-        "    show_state(env)"
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
